Fixed footer to not overlap the body

--- a/assets/style.css
+++ b/assets/style.css
@@ -51,12 +51,15 @@ h3 {
 }
 
 .footer {
-  text-align: center;
-  bottom: 0;
-  padding-bottom: 20px;
-  width: 50%;
-  position: fixed;
-  bottom: -20;
+    text-align: center;
+    bottom: 0;
+    padding-bottom: 20px;
+    width: 100%;
+    position: fixed;
+    left: 0;
+    height: 2em;
+    font-size: small;
+    color: #707070;
 }
 
 .simulatorSetup {
@@ -107,8 +110,9 @@ h3 {
 }
 
 body {
-  display: flex;
-  justify-content: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 #react-entry-point {
